# logistic-optimization-devops

./: README.md  pyproject.toml
.github/workflows/: ci.yaml
logistic_optimization/: README.md  pyproject.toml
logistic_optimization/api/: Dockerfile  api.py  build.sh  pyproject.toml  requirements.txt  run.sh
logistic_optimization/app/api/routes/: predictor.py
logistic_optimization/app/core/: config.py  events.py
logistic_optimization/app/models/: prediction.py
logistic_optimization/ml/data/: processed_data.csv
logistic_optimization/ml/notebooks/: model_training.ipynb
logistic_optimization/tests/: tests.py
